<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".components.TextFieldActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <com.natura.android.expansionPanel.ExpansionPanel
            android:id="@+id/first_expansion_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/expansion_panel_screen_componentone_title">

            <LinearLayout
                android:id="@+id/circle_example"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/ds_border_circle"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_example"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="?spacingSmall"
                android:layout_marginTop="0dp"
                android:text="@string/expansion_panel_screen_componentone_content"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/circle_example"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.natura.android.expansionPanel.ExpansionPanel>

        <com.natura.android.expansionPanel.ExpansionPanel
            android:id="@+id/second_expansion_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/expansion_panel_screen_componenttwo_title">

            <TextView
                android:id="@+id/listener_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="?spacingSmall"
                android:layout_marginTop="0dp"
                android:text="@string/expansion_panel_screen_componenttwo_content"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.natura.android.expansionPanel.ExpansionPanel>

    </LinearLayout>

</ScrollView>