...
    <string name="counter_screen_size_semix_text">Size Semix</string>
    <string name="counter_screen_subtract_disable_text">Subtract Disable</string>
    <string name="counter_screen_add_disable_text">Add Disable</string>
    <string name="counter_screen_all_disable_text">All Disable</string>
    <string name="counter_screen_no_label_text">No label</string>
    <string name="main_screen_token_text">TOKEN (A-Z)</string>
    <string name="main_screen_border_radius_text">Border Radius</string>
    <string name="main_screen_color_text">Color</string>
    <string name="main_screen_elevation_text">Elevation</string>
    <string name="main_screen_icons_text">Icons (drawables)</string>
    <string name="main_screen_opacity_text">Opacity</string>
    <string name="main_screen_size_text">Size</string>
    <string name="main_screen_spacing_text">Spacing</string>
    <string name="main_screen_typography_text">Typography</string>
    <string name="main_screen_custom_typography_text">Custom Typography</string>
    <string name="main_screen_component_text">COMPONENT (A-Z)</string>
    <string name="main_screen_app_bar_top_text">App Bar Top</string>
    <string name="main_screen_alert">Alert</string>
    <string name="main_screen_avatar_text">Avatar</string>
    <string name="main_screen_badge_text">Badge</string>
    <string name="main_screen_button_text">Button</string>
    <string name="main_screen_card_text">Card</string>
    <string name="main_screen_checkbox_text">Checkbox</string>
    <string name="main_screen_chip_text">Chip</string>
    <string name="main_screen_counter_text">Counter</string>
    <string name="main_screen_dialog_text">Dialog</string>
    <string name="main_screen_divider_text">Divider</string>
    <string name="main_screen_expansion_panel_text">Expansion Panel</string>
    <string name="main_screen_icon_button_text">Icon Button</string>
    <string name="main_screen_logo_text">Logo</string>
    <string name="main_screen_list_item_text">List Item</string>
    <string name="main_screen_progress_indicator_text">Progress Indicator</string>
    <string name="main_screen_radio_button_text">Radio Button</string>
    <string name="main_screen_select_text">Select</string>
    <string name="main_screen_shortcut_text">Shortcut</string>
    <string name="main_screen_snackbar_text">Snackbar</string>
    <string name="main_screen_tag_text">Tag</string>
    <string name="main_screen_textfield_text">Text Field</string>
    <string name="main_screen_value_text_highlight_text">Value Text Highlight</string>
    <string name="main_screen_pattern_text">PATTERN (A-Z)</string>
    <string name="main_screen_error_default_text">Error Default</string>
    <string name="main_screen_navigation_drawer_text">Navigation Drawer</string>
    <string name="main_screen_menu_item_text">Menu Item</string>
    <string name="main_screen_submenu_item_text">Submenu Item</string>
    <string name="custom_typography_screen_headline_text">Headline</string>
    <string name="custom_typography_screen_headline_example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla tincidunt ipsum at iaculis. Phasellus vel nisi quis ligula aliquet placerat. Etiam vitae vulputate nibh. Aliquam eros sapien, sollicitudin et ex nec, interdum fringilla dui. Praesent vel metus sollicitudin, accumsan nisl vel, pellentesque magna. Fusce sagittis
    <string name="custom_typography_screen_display_text">Display</string>
    <string name="custom_typography_screen_display_example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla tincidunt ipsum at iaculis. Phasellus vel nisi quis ligula aliquet placerat. Etiam vitae vulputate nibh. Aliquam eros sapien, sollicitudin et ex nec, interdum fringilla dui. Praesent vel metus sollicitudin, accumsan nisl vel, pellentesque magna. Fusce sagittis 
...
    <string name="text_field_icon_leading_label">With icon leading</string>
    <string name="text_field_icon_leading_hint">Icon leading</string>
    <string name="text_field_icon_action_label">Action with icon</string>
    <string name="text_field_image_action_hint">Icon has action on touch</string>
    <string name="text_field_image_action_label">Action with image</string>
    <string name="shortcut_screen_counter_click_text">Counter click 0</string>
    <string name="expansion_panel_screen_componentone_title">Expansion Panel 1</string>
    <string name="expansion_panel_screen_componentone_content">Details\n\nThis expanded area is a Constraint Layout.\nAny group of components can be used here.</string>
    <string name="expansion_panel_screen_componenttwo_title">Expansion Panel 2</string>
    <string name="expansion_panel_screen_componenttwo_content">Details\n\nThere\'s a state change listener in this sample collapsing one ExpansionPanel when the other one expands.</string>
    <string name="brand_selector_screen_app_name_text">GaYa Design System</string>
    <string name="brand_selector_screen_app_version_text">versão 9.31.0</string>
    <string name="brand_selector_select_brand_text">Selecione uma marca:</string>
...
