...

        <Button
            android:id="@+id/borderRadiusButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnIconsDrawables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/opacityTokensButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/sizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/typographyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnAppBarTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnBadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnStyleButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/checkboxButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/dialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnExpansionPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/logoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/progressIndicatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/radioButtonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/shortcutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/tagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnValueTextHighlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnErrorDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnNavigationDrawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnSubmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
