...
            android:padding="@dimen/ds_spacing_small"
            android:text="@string/appbartop_attributes_screen_patterns_text"
            android:textAlignment="textStart"
            android:textColor="@color/highEmphasis" />

        <Button
            android:id="@+id/btnActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/surface"
            android:drawableRight="@drawable/outlined_navigation_arrowleft"
            android:padding="16dp"
...
